--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<h1>Lee D</h1>
   <p>이메일 : secret****@naver.com</p>
   <h2>Who I am?</h2>
-  <p>졸작공부중입니다. html 남들하는만큼만이라도 하고싶습니다. <br>
+  <p>공부중입니다. <br>
     저의 의지가 도와줬으면 좋겠습니다..</p>
 	<h2>SNS</h2>
 	<ul>
