--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <h2>Who I am?</h2>
   <p>공부중입니다. <br>
     저의 의지가 도와줬으면 좋겠습니다..</p>
+	<div id="map" style="width:100%;height:350px;"></div>
 	<h2>SNS</h2>
 	<ul>
 		<li><a href="https://github.com/yeddoen/MyPractice" target="_blank">GitHub</a></li>
@@ -79,5 +80,17 @@
 				<td>재학</td>
 		</tbody>
 	</table>
+
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4cd3922e043ddbca97912545923ecfcc"></script>
+<script>
+var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+    mapOption = { 
+        center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+        level: 3 // 지도의 확대 레벨
+    };
+
+// 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
+var map = new kakao.maps.Map(mapContainer, mapOption); 
+</script>
 </body>
 </html>
