--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		</tbody>
 	</table>
 
-<script type="text/javascript" src="http://dapi.kakao.com/v2/maps/sdk.js?appkey=4cd3922e043ddbca97912545923ecfcc"></script>
+<script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=4cd3922e043ddbca97912545923ecfcc"></script>
 <script>
 var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
     mapOption = { 
