--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<li><a href="https://github.com/yeddoen/MyPractice" target="_blank">GitHub</a></li>
 		<li><a href="https://twitter.com/WannaOne_twt?s=17" target="_blank">Twitter</a></li>
 		<li><a href="1.html">연결하기</a></li>
+		<li><a href="NewWeather.jsp">제발</a></li>
 	</ul>
 	<hr>
 	<h2>Skills</h2>
