--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 		<li><a href="1.html">연결하기</a></li>
 	</ul>
 	<hr>
-	<input type="button" value="눌러" onclick="location.href='NewWeather.jsp'"/>
+	<form action="NewWeather.jsp" method="post">
+		<input type="submit" value="제발"/>
+	</form>
 	<h2>Skills</h2>
 	<ul>
 		<li>
