--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
 		<li><a href="1.html">연결하기</a></li>
 	</ul>
 	<hr>
+	<form action="NewWeather.jsp" method="get">
+		<input type="submit" value="겟"/>
+	</form>
 	<form action="NewWeather.jsp" method="post">
-		<input type="submit" value="제발"/>
+		<input type="submit" value="포"/>
 	</form>
 	<h2>Skills</h2>
 	<ul>
